--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">SendCodes</h1>
+        <h1 class="sitename">JMDev</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -80,7 +80,7 @@
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I am Jheremie Magat</h2>
-        <p><span class="typed" data-typed-items="Designer, Developer"></span></p>
+        <p><span class="typed" data-typed-items="Web Designer, Web Developer, Web Manager, SEO Content Writer"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -94,11 +94,11 @@
           <div class="col-md-6">
 
             <div class="row justify-content-between gy-4">
-              <div class="col-lg-5">
-                <img src="assets/img/qcu-img.JPG" class="img-fluid" alt="">
+              <div class="col-lg-12">
+                <img src="assets/img/ako.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-7 about-info">
-                <p><strong>Name: </strong> <span>Jheremie Magat</span></p>
+                <!-- <p><strong>Name: </strong> <span>Jheremie Magat</span></p> -->
                 <!-- <p><strong>Profile: </strong> <span>Back-end Developer</span></p> -->
                 <!-- <p><strong>Phone: </strong> <span>(+63)9051261206</span></p> -->
                 <style>
@@ -113,7 +113,7 @@
               </div>
             </div>
 
-            <div class="skills-content skills-animation">
+            <!-- <div class="skills-content skills-animation">
 
               <h5>Skills</h5>
 
@@ -122,37 +122,65 @@
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-              </div><!-- End Skills Item -->
+              </div>
 
               <div class="progress">
                 <span class="skill"><span>Web Designing</span> <i class="val">85%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-              </div><!-- End Skills Item -->
+              </div>
 
               <div class="progress">
                 <span class="skill"><span>Database Designing</span> <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-              </div><!-- End Skills Item -->
+              </div>
 
               <div class="progress">
                 <span class="skill"><span>Admin Assistant</span> <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-              </div><!-- End Skills Item -->
+              </div>
 
-            </div>
+              <div class="progress">
+                <span class="skill"><span>SEO Content Writing</span> <i class="val">85%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+
+              <div class="progress">
+                <span class="skill"><span>Web Management</span> <i class="val">90%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+
+            </div> -->
           </div>
 
           <div class="col-md-6">
             <div class="about-me">
-              <h4>About me</h4>
+              <h4>Who's Jheremie?</h4>
               <p>
-                Hi, I am Jheremie your aspiring Web Developer! and I'm passionate about Creating Websites. With a background in Web Development, I have developed a diverse skill set that includes Web Designing, Deploying. I enjoy Developing Websites and am always eager to learn and explore new opportunities.
+                Hi, I am Jheremie Magat, and I'm a fresh graduate student who wants to excel and land a job that suits his skill and of course a well paying job. Why should you hire me? 
+                The answer is simple, During my time when I was still studying I have been involved in Web Development, I find myself getting happy everytime I create a solution, 
+                and that continue until my last year. I've been a Head Programmer on our Thesis/Capstone Project and gladly We Passed. So moving forward, I graduated in BSIT Major in Web Programming/
+                Development and now looking for a job.
+              </p>
+            </div>
+            <div class="about-me">
+              <h4>Why hire me?</h4>
+              <p>
+                <b>Why hire me?</b> It is simple, first I am confident and young who's willing to learn the tasks or job that you want me to do, 
+                I got fresh mind and uptrend. <b>Web Development?</b> I got you, I know the fundamentals. <b>WordPress(Elementor), HTML, CSS, JS, PHP, Laravel, MySQL.</b> and I'm confident that I'd perform
+                well to satisfy the needs of the client and will surely excel overtime. <b>Web Design?</b> say no more, I am capable of using <b>Canva, Figma</b>
+                to Create the Design of the Website that you want. <b>Database Designing?</b> That's one of my favorite, I can do the structure 
+                of your database using VSCode, LucidChart, I got your back. That's only a few of what I can offer, there's so much more, and I hope
+                I land in one of your jobs and I can guarantee you that I will do my best to contribute to your company.
               </p>
             </div>
           </div>
@@ -233,6 +261,18 @@
                 <li>Calling different clients to make sure that they are assured with the product we sell</li>
               </ul>
             </div><!-- Edn Resume Item -->
+            <div class="resume-item">
+              <h4>Part time SEO Content Writer / Website Manager using WordPress</h4>
+              <h5>2024</h5>
+              <p><em>Outsourced</em></p>
+              <ul>
+                <li>I generate contents that needs for the website, content creation of what to put inside the website</li>
+                <li>Gathering Images, Resources to be used in the Website</li>
+                <li>Updating, Installing Plugins needed like Elementor, Rank Math SEO</li>
+                <li>Optimize the website and fixed it thoroughly including the responsiveness of the website</li>
+                <li>Making sure that the website is smooth, all the buttons are working, all the objects are in the right place both web and mobile</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
 
           </div>
 
@@ -285,11 +325,49 @@
                 <i class="bi bi-easel"></i>
               </div>
               <a href="#" class="stretched-link">
+                <h3>Web Management</h3>
+              </a>
+              <p><h6>Having a problem with updating or modifying contents on your Website?, Worry no more.</p></h6> 
+            </div>
+          </div><!-- End Service Item -->
+
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-database-up"></i>
+              </div>
+              <a href="#" class="stretched-link">
                 <h3>Database Designing</h3>
               </a>
               <p><h6>Having a problem with your database, entity relationships? I can help you with that.</p></h6> 
             </div>
           </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-pen"></i>
+              </div>
+              <a href="#" class="stretched-link">
+                <h3>SEO Content Writing</h3>
+              </a>
+              <p><h6>Having a problem with your Website Ranking?, let us optimize that, making sure that your website rank on top.</p></h6> 
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-pen"></i>
+              </div>
+              <a href="#" class="stretched-link">
+                <h3>WordPress Developer / Manager</h3>
+              </a>
+              <p><h6>Looking for someone who's knowledgeable on WordPress? let my help you to that and I will promise to do my best.</p></h6> 
+            </div>
+          </div><!-- End Service Item -->
+
 
           <!-- <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
@@ -334,9 +412,9 @@
 
       </div>
 
-    </section><!-- /Services Section -->
+    </section>
 
-    <!-- Stats Section -->
+    <!-- Stats Section
     <section id="stats" class="stats section accent-background">
       <img src="assets/img/stats-bg.jpg" alt="" data-aos="fade-in">
       <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
@@ -348,7 +426,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     
 
     <!-- Portfolio Section -->
@@ -379,7 +457,7 @@
                 <h4>Quezon City Medicine Distribution System</h4>
                 <p>Made a distribution system that aims to evenly distribute the medicine all throughout Quezon City.</p>
                 <a href="assets/img/portfolio/qcmds.jpg"  data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details-qcmds.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -389,7 +467,7 @@
                 <h4>Hotel Booking Management System</h4>
                 <p>Made a Booking Management System for Axiaa Hotel.</p>
                 <a href="assets/img/portfolio/hbms.jpg"  data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details-hbms.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -399,7 +477,7 @@
                 <h4>Internship Management System</h4>
                 <p>Made an Internship Management System for School for their OJT students. </p>
                 <a href="assets/img/portfolio/ims.jpg"  data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details-ims.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -409,7 +487,7 @@
                 <h4>Employee Attendance Monitoring System via QR Code</h4>
                 <p>Made an Employee Attendance Monitoring System via QR code for easy time in and out based on their shifts/schedules.</p>
                 <a href="assets/img/portfolio/ems.jpg" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details-ems.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -419,7 +497,17 @@
                 <h4>Learning Management System</h4>
                 <p>Made a generic Learning Management System using VB.net (unfinished)</p>
                 <a href="assets/img/portfolio/lms.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-details-lms.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <img src="assets/img/portfolio/foundation.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Foundation Repair</h4>
+                <p>Made a Foundation Repair using WordPress Elementor</p>
+                <a href="assets/img/portfolio/foundation.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details-foundation.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -435,14 +523,14 @@
 
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials section accent-background">
+    <!-- <section id="testimonials" class="testimonials section accent-background">
 
       <img src="assets/img/testimonials-bg.jpg" class="testimonials-bg" alt="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="stats-item text-center w-100 h-100 d-flex align-items-center justify-content-center">
           <h1>Sorry, this part is for the Testimonials and it is under construction</h1>
-        </div>
+        </div> -->
         <!-- <div class="swiper init-swiper">
           <script type="application/json" class="swiper-config">
             {
@@ -595,7 +683,7 @@
           </div>
         </div>
 
-        <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="300">
+        <!-- <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="300">
           <div class="row gy-4">
 
             <div class="col-md-6">
@@ -623,7 +711,7 @@
             </div>
 
           </div>
-        </form><!-- End Contact Form -->
+        </form> -->
 
       </div>
 
@@ -640,7 +728,7 @@
       <div class="social-links d-flex justify-content-center">
         <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
         <a href="https://www.facebook.com/ZeKeyVayn/"><i class="bi bi-facebook"></i></a>
-        <a href="https://www.instagram.com/oaresj/"><i class="bi bi-instagram"></i></a>
+        <!-- <a href="https://www.instagram.com/oaresj/"><i class="bi bi-instagram"></i></a> -->
         <a href="https://www.linkedin.com/in/magat-jheremie-o-1aa118303/"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/jemoares"><i class="bi bi-github"></i></a>
       </div>
