--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+<!--             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/portfolio/foundation.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Foundation Repair</h4>
@@ -509,7 +509,7 @@
                 <a href="assets/img/portfolio/foundation.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details-foundation.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div><!-- End Portfolio Item --> -->
 
             
 
